--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "react-router-dom": "^6.8.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
