--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "@mui/material": "^5.11.9",
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.7",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
@@ -36,6 +38,8 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
