--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,42 +1,13 @@
-// {
-//   "compilerOptions": {
-//     "allowSyntheticDefaultImports": true,
-//     "outDir": "./public/",
-//     // "noImplicitAny": true,
-//     "module": "es6",
-//     "target": "es5",
-//     "jsx": "react",
-//     "allowJs": true,
-//     "moduleResolution": "node"
-//   }
-// }
-
-{
-  "compilerOptions": {
-    "target": "es5", // Specify ECMAScript target version
-    "module": "esnext",
-    "outDir": "./public/",
-    "lib": ["dom", "dom.iterable", "esnext"], // List of library files to be included in the compilation
-    "allowJs": true, // Allow JavaScript files to be compiled
-    "skipLibCheck": true, // Skip type checking of all declaration files
-    "esModuleInterop": true, // Disables namespace imports (import * as fs from "fs") and enables CJS/AMD/UMD style imports (import fs from "fs")
-    "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
-    //"strict": true, // Enable all strict type checking options
-    "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file.
-    "moduleResolution": "node", // Resolve modules using Node.js style
-    // "isolatedModules": true, // Unconditionally emit imports for unresolved files
-    "resolveJsonModule": true, // Include modules imported with .json extension
-    "noEmit": false, // Do not emit output (meaning do not compile code, only perform type checking)
-    "jsx": "react", // Support JSX in .tsx files
-    // "sourceMap": true, // Generate corrresponding .map file
-    // "declaration": true, // Generate corresponding .d.ts file
-    //"noUnusedLocals": true, // Report errors on unused locals
-    //"noUnusedParameters": true, // Report errors on unused parameters
-    "incremental": true, // Enable incremental compilation by reading/writing information from prior compilations to a file on disk
-    "noFallthroughCasesInSwitch": true // Report errors for fallthrough cases in switch statement
-  },
-  "include": [
-    "src/**/*" // *** The files TypeScript should type check ***
-  ],
-  "exclude": ["node_modules", "build"] // *** The files to not type check ***
-}
+ {
+   "compilerOptions": {
+     "allowSyntheticDefaultImports": true,
+     "outDir": "./public/",
+     "module": "es6",
+     "target": "es5",
+     "jsx": "react",
+     "allowJs": true,
+     "moduleResolution": "node"
+   },
+   "include": ["src/**/*", "index.d.ts"],
+   "exclude": ["node_modules", "build"]
+ }
