--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
     "style-loader": "^3.3.1",
