--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,6 +8,7 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
+    // "project": ["tsconfig.json"]
   },
   "plugins": ["react"],
   "rules": {}
