--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,10 @@
  {
    "compilerOptions": {
+     "jsx": "react-jsx",
      "allowSyntheticDefaultImports": true,
      "outDir": "./public/",
      "module": "es6",
-     "target": "es5",
-     "jsx": "react",
+     "target": "es6",
      "allowJs": true,
      "moduleResolution": "node"
    },
