--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
+    "clsx": "^1.2.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
