--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
+    "react-window": "^1.8.8",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
