--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
