--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
     "redux": "^4.2.1",
