--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
+    "react-headless-accordion": "^1.0.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
