--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^9.1.2",
     "clsx": "^1.2.1",
     "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -40,6 +41,7 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "node-sass": "^8.0.0",
     "react-headless-accordion": "^1.0.2",
     "react-material-ui-carousel": "^3.4.2",
