--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,19 @@
   "main": "index.tsx",
   "scripts": {
     "serve": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .ts,.tsx ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "app/**/*.(ts|tsx)": [
+      "npm run --silent lint:fix"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -27,22 +39,21 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "clsx": "^1.2.1",
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.34.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "react-headless-accordion": "^1.0.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.12.0",
