--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "husky": "^8.0.3",
+    "keen-slider": "^6.8.5",
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lint-staged": "^13.2.2",
@@ -66,7 +67,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
