--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,14 @@ services:
       - '8000:8000'
 
     volumes:
-      - ./backend:/app/backend
+      #      - ./backend:/app/backend
+      - type: bind
+        source: ./db.sqlite3
+        target: /portal/db.sqlite3
+
+      - type: bind
+        source: ./media
+        target: /portal/media
 
   frontend:
     build:
