--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     ports:
       - '8000:8000'
 
+    restart: always
+
     volumes:
 #      - ./backend:/app/backend
       - type: bind
@@ -27,6 +29,8 @@ services:
 
     ports:
       - '3000:3000'
+
+    restart: always
 
     volumes:
       - ./frontend:/app/frontend
