--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,9 +34,10 @@
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.7",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/css-modules": "^1.0.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
@@ -56,7 +57,6 @@
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "node-sass": "^8.0.0",
     "react-headless-accordion": "^1.0.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.12.0",
@@ -76,8 +76,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.8.1",
+    "tsc": "^2.0.4"
   }
 }
